<resources>
    <string name="app_name">CSGBBelgeDogrulama</string>

    <string name="toolbarDocVerification">Belge Doğrulama</string>
    <string name="barkodDogrulama">Barkod İle Doğrulama</string>
    <string name="barkodNoImg">123...</string>
    <string name="barkodNoDogrulama">Barkod No İle Doğrulama</string>
    <string name="edtHintBelgeNo"><font size="18">Belge No</font></string>
    <string name="btnDogrula">Doğrula</string>

</resources>
